WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184742
AX: [macOS] WebKit hangs when triggering an alert from an AOM increment event
https://bugs.webkit.org/show_bug.cgi?id=184742
Summary
AX: [macOS] WebKit hangs when triggering an alert from an AOM increment event
Nan Wang
Reported
2018-04-18 11:23:28 PDT
WebKit hangs when triggering an alert from an AOM increment event <
rdar://problem/39477716
>
Attachments
patch
(10.80 KB, patch)
2018-04-18 12:06 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2018-04-18 12:06:09 PDT
Created
attachment 338238
[details]
patch
chris fleizach
Comment 2
2018-04-18 12:53:35 PDT
Comment on
attachment 338238
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=338238&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3593 > + else if ([action isEqualToString:@"AXSyncDecrementAction"])
Should we remove the sync versions and fix the other tests? The sync versions aren’t that real anymore. What do you think
Nan Wang
Comment 3
2018-04-18 12:58:05 PDT
(In reply to chris fleizach from
comment #2
)
> Comment on
attachment 338238
[details]
> patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=338238&action=review
> > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3593 > > + else if ([action isEqualToString:@"AXSyncDecrementAction"]) > > Should we remove the sync versions and fix the other tests? The sync > versions aren’t that real anymore. What do you think
I tried to do that but a lot of the tests are doing increment/decrement multiple times and then check the value. That would require us to put tons of setTimeout in the tests and make them less readable. Another concern is that this is only Mac but some tests are for all platforms so it's not reasonable to make them wait. I think the core is not changed just the timing might be affected on macOS, so maybe keeping the sync version is not a bad idea?
WebKit Commit Bot
Comment 4
2018-04-18 14:21:56 PDT
Comment on
attachment 338238
[details]
patch Clearing flags on attachment: 338238 Committed
r230782
: <
https://trac.webkit.org/changeset/230782
>
WebKit Commit Bot
Comment 5
2018-04-18 14:21:57 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6
2018-04-20 11:46:39 PDT
The test for this change is frequently failing on macOS Debug bots:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fmac%2Fasync-increment-decrement-action.html
--- /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/accessibility/mac/async-increment-decrement-action-expected.txt +++ /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/accessibility/mac/async-increment-decrement-action-actual.txt @@ -6,8 +6,8 @@ PASS obj.intValue is 25 PASS obj.intValue is 25 -PASS obj.intValue is 50 -PASS obj.intValue is 50 +FAIL obj.intValue should be 50. Was 25. +FAIL obj.intValue should be 50. Was 25. PASS obj.intValue is 25 PASS successfullyParsed is true
Nan Wang
Comment 7
2018-04-20 11:47:47 PDT
(In reply to Ryan Haddad from
comment #6
)
> The test for this change is frequently failing on macOS Debug bots: >
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard
. > html#showAllRuns=true&tests=accessibility%2Fmac%2Fasync-increment-decrement- > action.html > > --- > /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/ > accessibility/mac/async-increment-decrement-action-expected.txt > +++ > /Volumes/Data/slave/highsierra-debug-tests-wk2/build/layout-test-results/ > accessibility/mac/async-increment-decrement-action-actual.txt > @@ -6,8 +6,8 @@ > > PASS obj.intValue is 25 > PASS obj.intValue is 25 > -PASS obj.intValue is 50 > -PASS obj.intValue is 50 > +FAIL obj.intValue should be 50. Was 25. > +FAIL obj.intValue should be 50. Was 25. > PASS obj.intValue is 25 > PASS successfullyParsed is true
Ok looking
Nan Wang
Comment 8
2018-04-20 12:10:38 PDT
will be fixing the flaky test in
https://bugs.webkit.org/show_bug.cgi?id=184834
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug