AX: [macOS] WebKit hangs when triggering an alert from an AOM increment event https://bugs.webkit.org/show_bug.cgi?id=184742

Reviewed by Chris Fleizach.

Source/WebCore:

Made increment and decrement actions on the macOS to be async. So that VoiceOver
won't hang indefinitely if performing the actions causes an alert or other modal
behaviors.

Test: accessibility/mac/async-increment-decrement-action.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityPerformIncrementAction]):
(-[WebAccessibilityObjectWrapper _accessibilityPerformIncrementAction]):
(-[WebAccessibilityObjectWrapper accessibilityPerformDecrementAction]):
(-[WebAccessibilityObjectWrapper _accessibilityPerformDecrementAction]):
(-[WebAccessibilityObjectWrapper accessibilityPerformAction:]):

Tools:

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::increment):
(AccessibilityUIElement::decrement):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
(WTR::AccessibilityUIElement::asyncIncrement):
(WTR::AccessibilityUIElement::asyncDecrement):
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::increment):
(WTR::AccessibilityUIElement::decrement):
(WTR::AccessibilityUIElement::asyncIncrement):
(WTR::AccessibilityUIElement::asyncDecrement):

LayoutTests:

* accessibility/mac/async-increment-decrement-action-expected.txt: Added.
* accessibility/mac/async-increment-decrement-action.html: Added.
* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/200264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230782 268f45cc-cd09-0410-ab3c-d52691b4dbfc