Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm
@@ -1328,14 +1328,14 @@ void AccessibilityUIElement::setValue(JSStringRef valueText)
 void AccessibilityUIElement::increment()
 {
     BEGIN_AX_OBJC_EXCEPTIONS
-    [m_element accessibilityPerformAction:NSAccessibilityIncrementAction];
+    [m_element accessibilityPerformAction:@"AXSyncIncrementAction"];
     END_AX_OBJC_EXCEPTIONS
 }
 
 void AccessibilityUIElement::decrement()
 {
     BEGIN_AX_OBJC_EXCEPTIONS
-    [m_element accessibilityPerformAction:NSAccessibilityDecrementAction];
+    [m_element accessibilityPerformAction:@"AXSyncDecrementAction"];
     END_AX_OBJC_EXCEPTIONS
 }
 
